[project]
name = "numerical-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
]
